--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+*In compliance with the [GPL-2.0](https://opensource.org/licenses/GPL-2.0) license: I declare that this version of the program contains my modifications, which can be seen through the usual "git" mechanism.*  
+
+
+
 2008-04-04 Various contributors
 	+ Solaris fixes
 	+ Replace vsprintf function in bg_lib.c with vsnprintf implementation started by Patrick Powell
